# ha-house-tools

./: .gitignore  CONTRIBUTING.md  README.md  apply_tuya_magic_fix.py  create_ac_toggle_automations.py  create_energy_dashboard.py  create_side_table_automation.py  create_sleep_window_automations.py  create_smart_ac_nap_mode_automation.py  create_solar_surplus_automation.py  create_telegram_ac_command.py  create_telegram_announce_command.py  create_telegram_battery_alert.py  create_telegram_charge_boost_command.py  create_telegram_help_command.py  create_telegram_off_command.py  create_telegram_on_command.py  create_telegram_override_command.py  create_telegram_pump_command.py  create_telegram_say_command.py  create_telegram_sayhere_command.py  create_telegram_smart_ac_command.py  create_telegram_smart_ac_report_command.py  create_telegram_smart_ac_weekly_command.py  create_telegram_status_command.py  create_telegram_water_command.py  create_zwave_notification_logger_automation.py  install_all.py  pyproject.toml  pytest.ini  requirements-dev.txt  set_smart_ac_enabled_initial_off.py  set_telegram_bot_commands.py  setup_ac_input_booleans.py  setup_ac_override_input_datetimes.py  setup_energy_prefs.py  setup_pi_sf_tts.py  setup_smart_ac.py  setup_smart_ac_charge_boost.py  setup_smart_ac_input_boolean.py  (+4 more)
docs/: DAB_PUMP_SETUP.md  DESIGN.md  IDEAS.md  INSTALL.md  PROGRAMMING_MODEL.md  SMART_AC.md  USAGE.md  openapi.yaml
pi_tts/: tts-speaker.service  tts_speaker.py
smart_ac/: analyze.py  calibrate.py  retrospective.py  smart-ac-retrospective.service  smart-ac-web.service  (+9 more)
(+14 files in other folders)
